# productionization

./: .gitignore
image_classifier/: model.py
mlp/: main.py  model.py  train_model.py
mlp/model_path/: mlp.pth
sentiment_classification/: README.md  main.py  model.py  train_model.py
sentiment_classification/front_end/: main.py
sentiment_classification/model_path/: metadata.json  vocab.pk
torch_script/: CMakeLists.txt  main.cpp  model_tracing.py  trace_model.pt  trace_transform.pt  traced_transforms.pt
